fix the display of settings

--- a/app/templates/_session_modal.html
+++ b/app/templates/_session_modal.html
@@ -54,7 +54,7 @@
 
       <div class="form-actions" style="margin-top: 40px;">
         <button type="button" class="btn btn-danger" onclick="closeModal('addSessionModal')">Cancel</button>
-        <button type="submit" id="session-modal-submit" class="btn btn-primary">Save Session Type</button>
+        <button type="submit" id="session-modal-submit" class="btn btn-success">Save</button>
 
       </div>
     </form>
